Update and rename .env.sample to .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=
+BOT_TOKEN=NzQ4NjU3NTE2OTM3NzQwMzY4.X0gnpQ.IZoT5leMRlctmOqjGicFZOf5JfE
 BOT_PREFIX=.
 BOT_VERSION=0.0.1-b
 CURRENCY_NAME=
